testdata/baselines/reference/submodule/conformance/inferringClassStaticMembersFromAssignments.errors.txt
b.ts(4,14): error TS2339: Property 'staticProp' does not exist on type 'typeof C1'.
b.ts(5,14): error TS2339: Property 'staticProp' does not exist on type 'typeof C2'.
b.ts(7,14): error TS2339: Property 'staticProp' does not exist on type '() => void'.
b.ts(10,12): error TS2339: Property 'staticProp' does not exist on type 'typeof C3'.
b.ts(11,12): error TS2339: Property 'staticProp' does not exist on type 'typeof C4'.
b.ts(13,12): error TS2339: Property 'staticProp' does not exist on type '() => void'.


==== a.js (0 errors) ====
    export class C1 { }
    C1.staticProp = 0;
    
    export function F1() { }
    F1.staticProp = 0;
    
    export var C2 = class { };
    C2.staticProp = 0;
    
    export let F2 = function () { };
    F2.staticProp = 0;
    
==== global.js (0 errors) ====
    class C3 { }
    C3.staticProp = 0;
    
    function F3() { }
    F3.staticProp = 0;
    
    var C4 = class { };
    C4.staticProp = 0;
    
    let F4 = function () { };
    F4.staticProp = 0;
    
==== b.ts (6 errors) ====
    import * as a from "./a";
    var n: number;
    
    var n = a.C1.staticProp;
                 ~~~~~~~~~~
!!! error TS2339: Property 'staticProp' does not exist on type 'typeof C1'.
    var n = a.C2.staticProp;
                 ~~~~~~~~~~
!!! error TS2339: Property 'staticProp' does not exist on type 'typeof C2'.
    var n = a.F1.staticProp;
    var n = a.F2.staticProp;
                 ~~~~~~~~~~
!!! error TS2339: Property 'staticProp' does not exist on type '() => void'.
    
    
    var n = C3.staticProp;
               ~~~~~~~~~~
!!! error TS2339: Property 'staticProp' does not exist on type 'typeof C3'.
    var n = C4.staticProp;
               ~~~~~~~~~~
!!! error TS2339: Property 'staticProp' does not exist on type 'typeof C4'.
    var n = F3.staticProp;
    var n = F4.staticProp;
               ~~~~~~~~~~
!!! error TS2339: Property 'staticProp' does not exist on type '() => void'.
    